<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WIMS</string>
    <string name="action_add">Add New</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_button_text">Search</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="add_button_text">Add</string>
    <string name="iteam_name">Iteam Name</string>
    <string name="item_location">Item Location</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="update_button_text">Update</string>
    <string name="delete_button_text">Delete this Item</string>
    <string name="search_box_text">Filter Items ...</string>
    <string name="action_help">Help</string>
    <string name="modified_on">Last Modified</string>
    <string name="delete_text">DELETE</string>
    <string name="cancel">Cancel</string>

</resources>